static-resources.yaml
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9090

static_resources:

  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
    #       codec_type: AUTO
          # stat_prefix: ingress_http
          stat_prefix: edge          
          stream_idle_timeout: 2s
          http_filters:          
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz            
              http_service:
                server_uri:
                  uri: /auth
                  cluster: ext-authz
                  timeout: 0.25s
                authorization_request:
                  allowed_headers: 
                    patterns:
                      exact: "x-auth"
              failure_mode_allow: false
          - name: envoy.filters.http.local_ratelimit
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
              stat_prefix: http_local_rate_limiter
              enable_x_ratelimit_headers: DRAFT_VERSION_03
              token_bucket:
                max_tokens: 5
                tokens_per_fill: 1
                fill_interval: 10s              
              filter_enabled:
                runtime_key: local_rate_limit_enabled
                default_value:
                  numerator: 100
                  denominator: HUNDRED
              filter_enforced:
                runtime_key: local_rate_limit_enforced
                default_value:
                  numerator: 0
                  denominator: HUNDRED
              request_headers_to_add_when_not_enforced:
                - append: false
                  header:
                    key: x-rate-limit-passou
                    value: 'true'

              response_headers_to_add:
                - append: false
                  header:
                    key: x-local-rate-limit
                    value: 'true'                  

              local_rate_limit_per_downstream_connection: false
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog    
          route_config:
    #         name: local_route
            virtual_hosts:
            - name: all_domains
              domains: ["*"]                              
              routes:
              - match:
                  prefix: "/"                
                route:
                  cluster: local_cluster

  clusters:
  - name: local_cluster
    type: LOGICAL_DNS
    load_assignment:
      cluster_name: local_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 3001
  - name: ext-authz
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: ext-authz
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 3000
